--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
-h1 {
-  text-align: center;
+body {
+  margin: 50px;
 }
 
-#Heading1 {
-  text-align: center;
-  color: white;
-  background-color: aqua;
+h1 {
+  border: 10px solid black;
+  margin: 30px;
+  padding: 10px;
+  width: 300px;
+  max-width: 200px;
+
+  /* flex */
+}
+
+h1::first-letter {
+  text-decoration: underline;
+  text-transform: lowercase;
+}
+
+#sec ul li {
+  display: inline-block;
+}
+#sec {
+  text-align: right;
+}
+
+#sec ul li a {
+  text-decoration: none;
+  /* border: 5px solid black; */
+  font-size: 10px;
+}
+
+#sec ul li a:hover {
+  color: orange;
+}
+
+#sec ul li a:visited {
+  color: red;
 }
